# exercicio-bookstore

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml  render.yaml
.github/workflows/: build.yml  workflo-pr.yml
bookstore/: settings.py  urls.py
order/: admin.py  factories.meta.json  factories.py  urls.meta.json
order/migrations/: 0001_initial.py
order/models/: order.meta.json
order/serializers/: __init__.py  order_serializer.meta.json  order_serializer.py
order/test/test_models/: test_order_model.meta.json  test_order_model.py
order/test/test_serializers/: test_order_serializer.meta.json  test_order_serializer.py
order/test/test_viewsets/: test_order_viewsets.py
order/viewsets/: order_viewset.meta.json  order_viewset.py
product/: factories.meta.json  factories.py  urls.meta.json
product/migrations/: 0001_initial.py
product/models/: category.meta.json  product.meta.json  product.py
product/serializers/: category_serializer.meta.json  category_serializer.py  product_serializer.py
product/tests/test_models/: test_category_model.meta.json  test_category_model.py  test_product_model.meta.json  test_product_model.py
product/tests/test_serializers/: test_category_serializer.meta.json  test_category_serializer.py  test_product_serializer.meta.json  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.meta.json  test_category_viewset.py  test_product_viewset.meta.json  test_product_viewset.py
product/viewsets/: category_viewset.meta.json  product_viewset.meta.json  product_viewset.py
