[project]
name = "ebac"
version = "0.1.0"
description = "bookstore API"
authors = [
    {name = "Joao Paulo Nunes",email = "jpnune@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.6,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=6.2.5,<7.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
