[project]
name = "ebac"
version = "0.1.0"
description = "bookstore API"
authors = [
    {name = "Joao Paulo Nunes",email = "jpnune@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.6,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "django-extensions (>=4.1,<5.0)",
    "django-debug-toolbar (>=7.0.0,<8.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "gunicorn (>=23.0.0)",
    "whitenoise (>=6.8.2)"
]

[dependency-groups]
dev = [
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-django (>=4.8.0,<5.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "django-debug-toolbar (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "bookstore.settings"
python_files = ["test_*.py", "*_test.py", "teste_*.py"]

[tool.mypy]
ignore_missing_imports = true
exclude = ["migrations"]
[tool.poetry]
package-mode = false
